set (SCCXF
  ${CMAKE_SOURCE_DIR}/src/absolute_relative.f
  ${CMAKE_SOURCE_DIR}/src/acctube.f
  ${CMAKE_SOURCE_DIR}/src/acctube_one.f
  ${CMAKE_SOURCE_DIR}/src/actideacti.f
  ${CMAKE_SOURCE_DIR}/src/actideactistr.f
  ${CMAKE_SOURCE_DIR}/src/adaptconnectivity.f
  ${CMAKE_SOURCE_DIR}/src/addimdnodecload.f
  ${CMAKE_SOURCE_DIR}/src/addimdnodedload.f
  ${CMAKE_SOURCE_DIR}/src/addizdofcload.f
  ${CMAKE_SOURCE_DIR}/src/addizdofdload.f
  ${CMAKE_SOURCE_DIR}/src/add_bo_st.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_ei.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_fl.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_fl_as.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_st.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_st_as.f
  ${CMAKE_SOURCE_DIR}/src/add_sm_st_corio.f
  ${CMAKE_SOURCE_DIR}/src/addimd.f
  ${CMAKE_SOURCE_DIR}/src/addimdnodedof.f
  ${CMAKE_SOURCE_DIR}/src/adjustcontactnodes.f
  ${CMAKE_SOURCE_DIR}/src/advecforc.f
  ${CMAKE_SOURCE_DIR}/src/advecstiff.f
  ${CMAKE_SOURCE_DIR}/src/air_valve.f
  ${CMAKE_SOURCE_DIR}/src/allocation.f
  ${CMAKE_SOURCE_DIR}/src/allocont.f
  ${CMAKE_SOURCE_DIR}/src/amplitudes.f
  ${CMAKE_SOURCE_DIR}/src/angsum.f
  ${CMAKE_SOURCE_DIR}/src/anisomaxwavspd.f
  ${CMAKE_SOURCE_DIR}/src/anisonl.f
  ${CMAKE_SOURCE_DIR}/src/anisotropic.f
  ${CMAKE_SOURCE_DIR}/src/applyboun.f
  ${CMAKE_SOURCE_DIR}/src/applympc.f
  ${CMAKE_SOURCE_DIR}/src/applympc_dpel.f
  ${CMAKE_SOURCE_DIR}/src/applympc_hfa.f
  ${CMAKE_SOURCE_DIR}/src/approxplane.f
  ${CMAKE_SOURCE_DIR}/src/assigndomtonodes.f
  ${CMAKE_SOURCE_DIR}/src/attach_1d.f
  ${CMAKE_SOURCE_DIR}/src/attach_2d.f
  ${CMAKE_SOURCE_DIR}/src/attach_3d.f
  ${CMAKE_SOURCE_DIR}/src/attachline.f
  ${CMAKE_SOURCE_DIR}/src/autocovmatrix.f
  ${CMAKE_SOURCE_DIR}/src/basemotions.f
  ${CMAKE_SOURCE_DIR}/src/basis.f
  ${CMAKE_SOURCE_DIR}/src/beamextscheme.f
  ${CMAKE_SOURCE_DIR}/src/beamgeneralsections.f
  ${CMAKE_SOURCE_DIR}/src/beamintscheme.f
  ${CMAKE_SOURCE_DIR}/src/beammpc.f
  ${CMAKE_SOURCE_DIR}/src/beamsections.f
  ${CMAKE_SOURCE_DIR}/src/biotsavart.f
  ${CMAKE_SOURCE_DIR}/src/blockanalysis.f
  ${CMAKE_SOURCE_DIR}/src/bodyadd.f
  ${CMAKE_SOURCE_DIR}/src/bodyforce.f
  ${CMAKE_SOURCE_DIR}/src/bounadd.f
  ${CMAKE_SOURCE_DIR}/src/bounaddf.f
  ${CMAKE_SOURCE_DIR}/src/boundaryfs.f
  ${CMAKE_SOURCE_DIR}/src/boundarys.f
  ${CMAKE_SOURCE_DIR}/src/bsort.f
  ${CMAKE_SOURCE_DIR}/src/buckles.f
  ${CMAKE_SOURCE_DIR}/src/calcbody.f
  ${CMAKE_SOURCE_DIR}/src/calcguesstincf.f
  ${CMAKE_SOURCE_DIR}/src/calcnormal.f
  ${CMAKE_SOURCE_DIR}/src/calccvel.f
  ${CMAKE_SOURCE_DIR}/src/calccvelcomp.f
  ${CMAKE_SOURCE_DIR}/src/calccvfa.f
  ${CMAKE_SOURCE_DIR}/src/calccvfacomp.f
  ${CMAKE_SOURCE_DIR}/src/calceigenvalues.f
  ${CMAKE_SOURCE_DIR}/src/calcenergy.f
  ${CMAKE_SOURCE_DIR}/src/calcenergycs.f
  ${CMAKE_SOURCE_DIR}/src/calcflux.f
  ${CMAKE_SOURCE_DIR}/src/calcgammak.f
  ${CMAKE_SOURCE_DIR}/src/calcgammao.f
  ${CMAKE_SOURCE_DIR}/src/calcgammap.f
  ${CMAKE_SOURCE_DIR}/src/calcgammat.f
  ${CMAKE_SOURCE_DIR}/src/calcgammav.f
  ${CMAKE_SOURCE_DIR}/src/calcgeomelemnet.f
  ${CMAKE_SOURCE_DIR}/src/calchcel.f
  ${CMAKE_SOURCE_DIR}/src/calchcfa.f
  ${CMAKE_SOURCE_DIR}/src/calcheatnet.f
  ${CMAKE_SOURCE_DIR}/src/calch0interface.f
  ${CMAKE_SOURCE_DIR}/src/calcinitialflux.f
  ${CMAKE_SOURCE_DIR}/src/calcmac.f
  ${CMAKE_SOURCE_DIR}/src/calcmass.f
  ${CMAKE_SOURCE_DIR}/src/calcmatwavspeed.f
  ${CMAKE_SOURCE_DIR}/src/calcpel.f
  ${CMAKE_SOURCE_DIR}/src/calcresfluid.f
  ${CMAKE_SOURCE_DIR}/src/calcrespfluid.f
  ${CMAKE_SOURCE_DIR}/src/calcrestfluid.f
  ${CMAKE_SOURCE_DIR}/src/calcresvfluid1.f
  ${CMAKE_SOURCE_DIR}/src/calcresvfluid2.f
  ${CMAKE_SOURCE_DIR}/src/calcrhoel.f
  ${CMAKE_SOURCE_DIR}/src/calcrhoel1.f
  ${CMAKE_SOURCE_DIR}/src/calcrhoelcomp.f
  ${CMAKE_SOURCE_DIR}/src/calcrhofa.f
  ${CMAKE_SOURCE_DIR}/src/calcrhofa1.f
  ${CMAKE_SOURCE_DIR}/src/calcrhofacomp_mod_smart.f
  ${CMAKE_SOURCE_DIR}/src/calcrhofacomp_ud.f
  ${CMAKE_SOURCE_DIR}/src/calcrhofacompisen.f
  ${CMAKE_SOURCE_DIR}/src/calcspringforc.f
  ${CMAKE_SOURCE_DIR}/src/calcstabletimeinccont.f
  ${CMAKE_SOURCE_DIR}/src/calcstabletimeincvol.f
  ${CMAKE_SOURCE_DIR}/src/calcstressheatflux.f
  ${CMAKE_SOURCE_DIR}/src/calcsurf.f
  ${CMAKE_SOURCE_DIR}/src/calcttel.f
  ${CMAKE_SOURCE_DIR}/src/calcttfaext.f
  ${CMAKE_SOURCE_DIR}/src/calculated.f
  ${CMAKE_SOURCE_DIR}/src/calculateh.f
  ${CMAKE_SOURCE_DIR}/src/calcumel.f
  ${CMAKE_SOURCE_DIR}/src/calcumfa.f
  ${CMAKE_SOURCE_DIR}/src/calcvel.f
  ${CMAKE_SOURCE_DIR}/src/calcview.f
  ${CMAKE_SOURCE_DIR}/src/calcvol.f
  ${CMAKE_SOURCE_DIR}/src/calc_ider_cross_split.f
  ${CMAKE_SOURCE_DIR}/src/calc_ider_tee.f
  ${CMAKE_SOURCE_DIR}/src/calc_ider_wye.f
  ${CMAKE_SOURCE_DIR}/src/calc_residual_cross_split.f
  ${CMAKE_SOURCE_DIR}/src/calc_residual_tee.f
  ${CMAKE_SOURCE_DIR}/src/calc_residual_wye.f
  ${CMAKE_SOURCE_DIR}/src/calinput.f
  ${CMAKE_SOURCE_DIR}/src/carbon_seal.f
  ${CMAKE_SOURCE_DIR}/src/cataloguenodes.f
  ${CMAKE_SOURCE_DIR}/src/catedges.f
  ${CMAKE_SOURCE_DIR}/src/cattet.f
  ${CMAKE_SOURCE_DIR}/src/cavity.f
  ${CMAKE_SOURCE_DIR}/src/cavityext.f
  ${CMAKE_SOURCE_DIR}/src/cd_bleedtapping.f
  ${CMAKE_SOURCE_DIR}/src/cd_bragg.f
  ${CMAKE_SOURCE_DIR}/src/cd_chamfer.f
  ${CMAKE_SOURCE_DIR}/src/cd_lab_1spike.f
  ${CMAKE_SOURCE_DIR}/src/cd_lab_correction.f
  ${CMAKE_SOURCE_DIR}/src/cd_lab_honeycomb.f
  ${CMAKE_SOURCE_DIR}/src/cd_lab_radius.f
  ${CMAKE_SOURCE_DIR}/src/cd_lab_straight.f
  ${CMAKE_SOURCE_DIR}/src/cd_lichtarowicz.f
  ${CMAKE_SOURCE_DIR}/src/cd_Mcgreehan_Schotsch.f
  ${CMAKE_SOURCE_DIR}/src/cd_ms_ms.f
  ${CMAKE_SOURCE_DIR}/src/cd_own_albers.f
  ${CMAKE_SOURCE_DIR}/src/cd_pk_albers.f
  ${CMAKE_SOURCE_DIR}/src/cd_pk_ms.f
  ${CMAKE_SOURCE_DIR}/src/cd_preswirlnozzle.f
  ${CMAKE_SOURCE_DIR}/src/cfds.f
  ${CMAKE_SOURCE_DIR}/src/cflux.f
  ${CMAKE_SOURCE_DIR}/src/cfluxs.f
  ${CMAKE_SOURCE_DIR}/src/changedepterm.f
  ${CMAKE_SOURCE_DIR}/src/changefrictions.f
  ${CMAKE_SOURCE_DIR}/src/changematerials.f
  ${CMAKE_SOURCE_DIR}/src/changeplastics.f
  ${CMAKE_SOURCE_DIR}/src/changesolidsections.f
  ${CMAKE_SOURCE_DIR}/src/changesurfacebehaviors.f
  ${CMAKE_SOURCE_DIR}/src/changekon.f
  ${CMAKE_SOURCE_DIR}/src/characteristic.f
  ${CMAKE_SOURCE_DIR}/src/checkconstraint.f
  ${CMAKE_SOURCE_DIR}/src/checkimpacts.f
  ${CMAKE_SOURCE_DIR}/src/checkinputvaluesnet.f
  ${CMAKE_SOURCE_DIR}/src/checkprojectgrad.f
  ${CMAKE_SOURCE_DIR}/src/checktemp.f
  ${CMAKE_SOURCE_DIR}/src/checktime.f
  ${CMAKE_SOURCE_DIR}/src/checktruecontact.f
  ${CMAKE_SOURCE_DIR}/src/chksurf.f
  ${CMAKE_SOURCE_DIR}/src/cident.f
  ${CMAKE_SOURCE_DIR}/src/cident20.f
  ${CMAKE_SOURCE_DIR}/src/cident80.f
  ${CMAKE_SOURCE_DIR}/src/clearances.f
  ${CMAKE_SOURCE_DIR}/src/cload.f
  ${CMAKE_SOURCE_DIR}/src/cloads.f
  ${CMAKE_SOURCE_DIR}/src/closefile.f
  ${CMAKE_SOURCE_DIR}/src/closefilefluid.f
  ${CMAKE_SOURCE_DIR}/src/complete_hel.f
  ${CMAKE_SOURCE_DIR}/src/complete_hel_blk.f
  ${CMAKE_SOURCE_DIR}/src/complete_hel_cyclic.f
  ${CMAKE_SOURCE_DIR}/src/complete_hel_cyclic_blk.f
  ${CMAKE_SOURCE_DIR}/src/complexfrequencys.f
  ${CMAKE_SOURCE_DIR}/src/conductivitys.f
  ${CMAKE_SOURCE_DIR}/src/constraints.f
  ${CMAKE_SOURCE_DIR}/src/contactdampings.f
  ${CMAKE_SOURCE_DIR}/src/contactpairs.f
  ${CMAKE_SOURCE_DIR}/src/contactprints.f
  ${CMAKE_SOURCE_DIR}/src/controlss.f
  ${CMAKE_SOURCE_DIR}/src/convert2slapcol.f
  ${CMAKE_SOURCE_DIR}/src/coriolissolve.f
  ${CMAKE_SOURCE_DIR}/src/correctflux.f
  ${CMAKE_SOURCE_DIR}/src/correctfluxcomp.f
  ${CMAKE_SOURCE_DIR}/src/correctrhoelcomp.f
  ${CMAKE_SOURCE_DIR}/src/correctrhofacomp.f
  ${CMAKE_SOURCE_DIR}/src/correctvel.f
  ${CMAKE_SOURCE_DIR}/src/correctvel_simplec.f
  ${CMAKE_SOURCE_DIR}/src/couplings.f
  ${CMAKE_SOURCE_DIR}/src/couptempdisps.f
  ${CMAKE_SOURCE_DIR}/src/cp_corrected.f
  ${CMAKE_SOURCE_DIR}/src/createblock.f
  ${CMAKE_SOURCE_DIR}/src/createblock_struct.f
  ${CMAKE_SOURCE_DIR}/src/createelemneigh.f
  ${CMAKE_SOURCE_DIR}/src/createfint.f
  ${CMAKE_SOURCE_DIR}/src/createialnk.f
  ${CMAKE_SOURCE_DIR}/src/createinterfacempcs.f
  ${CMAKE_SOURCE_DIR}/src/createinum.f
  ${CMAKE_SOURCE_DIR}/src/createmddof.f
  ${CMAKE_SOURCE_DIR}/src/createmdelem.f
  ${CMAKE_SOURCE_DIR}/src/createnodeneigh.f
  ${CMAKE_SOURCE_DIR}/src/createtet.f
  ${CMAKE_SOURCE_DIR}/src/createtiedsurfs.f
  ${CMAKE_SOURCE_DIR}/src/create_iau6.f
  ${CMAKE_SOURCE_DIR}/src/creep.f
  ${CMAKE_SOURCE_DIR}/src/creeps.f
  ${CMAKE_SOURCE_DIR}/src/cross_split.f
  ${CMAKE_SOURCE_DIR}/src/cubic.f
  ${CMAKE_SOURCE_DIR}/src/cubtri.f
  ${CMAKE_SOURCE_DIR}/src/cyclichardenings.f
  ${CMAKE_SOURCE_DIR}/src/cyclicsymmetrymodels.f
  ${CMAKE_SOURCE_DIR}/src/dampings.f
  ${CMAKE_SOURCE_DIR}/src/dashdamp.f
  ${CMAKE_SOURCE_DIR}/src/dashforc.f
  ${CMAKE_SOURCE_DIR}/src/dashpots.f
  ${CMAKE_SOURCE_DIR}/src/dattime.f
  ${CMAKE_SOURCE_DIR}/src/ddeabm.f
  ${CMAKE_SOURCE_DIR}/src/ddebdf.f
  ${CMAKE_SOURCE_DIR}/src/deformationplasticitys.f
  ${CMAKE_SOURCE_DIR}/src/defplas.f
  ${CMAKE_SOURCE_DIR}/src/delaun.f
  ${CMAKE_SOURCE_DIR}/src/deltri.f
  ${CMAKE_SOURCE_DIR}/src/densitys.f
  ${CMAKE_SOURCE_DIR}/src/depvars.f
  ${CMAKE_SOURCE_DIR}/src/designvariabless.f
  ${CMAKE_SOURCE_DIR}/src/desiperelem.f
  ${CMAKE_SOURCE_DIR}/src/determineextern.f
  ${CMAKE_SOURCE_DIR}/src/deuldlag.f
  ${CMAKE_SOURCE_DIR}/src/dflux.f
  ${CMAKE_SOURCE_DIR}/src/dfluxs.f
  ${CMAKE_SOURCE_DIR}/src/dgesv.f
  ${CMAKE_SOURCE_DIR}/src/dgmres.f
  ${CMAKE_SOURCE_DIR}/src/dgmres1.f
  ${CMAKE_SOURCE_DIR}/src/dir.f
  ${CMAKE_SOURCE_DIR}/src/disp_sen_dv.f
  ${CMAKE_SOURCE_DIR}/src/distattach_1d.f
  ${CMAKE_SOURCE_DIR}/src/distattach_2d.f
  ${CMAKE_SOURCE_DIR}/src/distattach_3d.f
  ${CMAKE_SOURCE_DIR}/src/distattachline.f
  ${CMAKE_SOURCE_DIR}/src/distributesens.f
  ${CMAKE_SOURCE_DIR}/src/distributingcouplings.f
  ${CMAKE_SOURCE_DIR}/src/dKdm.f
  ${CMAKE_SOURCE_DIR}/src/dKdp.f
  ${CMAKE_SOURCE_DIR}/src/dKdt.f
  ${CMAKE_SOURCE_DIR}/src/dKdX.f
  ${CMAKE_SOURCE_DIR}/src/dload.f
  ${CMAKE_SOURCE_DIR}/src/dloads.f
  ${CMAKE_SOURCE_DIR}/src/dlz.f
  ${CMAKE_SOURCE_DIR}/src/dqag.f
  ${CMAKE_SOURCE_DIR}/src/drfftf.f
  ${CMAKE_SOURCE_DIR}/src/dslugm.f
  ${CMAKE_SOURCE_DIR}/src/dsort.f
  ${CMAKE_SOURCE_DIR}/src/dynamics.f
  ${CMAKE_SOURCE_DIR}/src/dynamic_viscosity.f
  ${CMAKE_SOURCE_DIR}/src/dynresults.f
  ${CMAKE_SOURCE_DIR}/src/edg.f
  ${CMAKE_SOURCE_DIR}/src/edgedivide.f
  ${CMAKE_SOURCE_DIR}/src/effectivemodalmass.f
  ${CMAKE_SOURCE_DIR}/src/elastics.f
  ${CMAKE_SOURCE_DIR}/src/electricalconductivitys.f
  ${CMAKE_SOURCE_DIR}/src/electromagneticss.f
  ${CMAKE_SOURCE_DIR}/src/elementpernode.f
  ${CMAKE_SOURCE_DIR}/src/elements.f
  ${CMAKE_SOURCE_DIR}/src/elemperdesi.f
  ${CMAKE_SOURCE_DIR}/src/elemperorien.f
  ${CMAKE_SOURCE_DIR}/src/elprints.f
  ${CMAKE_SOURCE_DIR}/src/envtemp.f
  ${CMAKE_SOURCE_DIR}/src/eplane.f
  ${CMAKE_SOURCE_DIR}/src/equationcheck.f
  ${CMAKE_SOURCE_DIR}/src/equationfs.f
  ${CMAKE_SOURCE_DIR}/src/equations.f
  ${CMAKE_SOURCE_DIR}/src/equcons.f
  ${CMAKE_SOURCE_DIR}/src/errorestimator.f
  ${CMAKE_SOURCE_DIR}/src/evalshapefunc.f
  ${CMAKE_SOURCE_DIR}/src/expansions.f
  ${CMAKE_SOURCE_DIR}/src/extfacepernode.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate_d_v_simple.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate_d_v_simplec.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate_se.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate_u.f
  ${CMAKE_SOURCE_DIR}/src/extrapolate_u1.f
  ${CMAKE_SOURCE_DIR}/src/extrapolatecontact.f
  ${CMAKE_SOURCE_DIR}/src/extrapolatefluid.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_dpel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_dpel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_dpel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_dpel5.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_kel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_kel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_kel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_kel4.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_kel5.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_oel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_oel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_oel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_oel4.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_oel5.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_pel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_pel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_pel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_pel4.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_tel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_tel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_tel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_tel4.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_tel5.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_vel1.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_vel2.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_vel3.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_vel4.f
  ${CMAKE_SOURCE_DIR}/src/extrapol_vel5.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_cs_se.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_em.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_rhs.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_rhs_th.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_se.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_se2.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_th.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_u.f
  ${CMAKE_SOURCE_DIR}/src/e_c3d_u1.f
  ${CMAKE_SOURCE_DIR}/src/e_corio.f
  ${CMAKE_SOURCE_DIR}/src/e_damp.f
  ${CMAKE_SOURCE_DIR}/src/faceinfo.f
  ${CMAKE_SOURCE_DIR}/src/fcrit.f
  ${CMAKE_SOURCE_DIR}/src/fillknotmpc.f
  ${CMAKE_SOURCE_DIR}/src/fill_neiel.f
  ${CMAKE_SOURCE_DIR}/src/film.f
  ${CMAKE_SOURCE_DIR}/src/films.f
  ${CMAKE_SOURCE_DIR}/src/filter.f
  ${CMAKE_SOURCE_DIR}/src/filters.f
  ${CMAKE_SOURCE_DIR}/src/findextsurface.f
  ${CMAKE_SOURCE_DIR}/src/findsurface.f
  ${CMAKE_SOURCE_DIR}/src/fixnode.f
  ${CMAKE_SOURCE_DIR}/src/flowoutput.f
  ${CMAKE_SOURCE_DIR}/src/flowresult.f
  ${CMAKE_SOURCE_DIR}/src/fluidconstantss.f
  ${CMAKE_SOURCE_DIR}/src/fluidsections.f
  ${CMAKE_SOURCE_DIR}/src/flux.f
  ${CMAKE_SOURCE_DIR}/src/forcadd.f
  ${CMAKE_SOURCE_DIR}/src/forcesolve.f
  ${CMAKE_SOURCE_DIR}/src/frdfluid.f
  ${CMAKE_SOURCE_DIR}/src/frditeration.f
  ${CMAKE_SOURCE_DIR}/src/free_convection.f
  ${CMAKE_SOURCE_DIR}/src/free_disc_pumping.f
  ${CMAKE_SOURCE_DIR}/src/frequencys.f
  ${CMAKE_SOURCE_DIR}/src/fricheat.f
  ${CMAKE_SOURCE_DIR}/src/friction_coefficient.f
  ${CMAKE_SOURCE_DIR}/src/frictionheating.f
  ${CMAKE_SOURCE_DIR}/src/frictions.f
  ${CMAKE_SOURCE_DIR}/src/fsub.f
  ${CMAKE_SOURCE_DIR}/src/fsuper.f
  ${CMAKE_SOURCE_DIR}/src/gapcon.f
  ${CMAKE_SOURCE_DIR}/src/gapconductances.f
  ${CMAKE_SOURCE_DIR}/src/gapheatgenerations.f
  ${CMAKE_SOURCE_DIR}/src/gaps.f
  ${CMAKE_SOURCE_DIR}/src/gasmechbc.f
  ${CMAKE_SOURCE_DIR}/src/gaspipe_fanno.f
  ${CMAKE_SOURCE_DIR}/src/gen3dboun.f
  ${CMAKE_SOURCE_DIR}/src/gen3dconnect.f
  ${CMAKE_SOURCE_DIR}/src/gen3delem.f
  ${CMAKE_SOURCE_DIR}/src/gen3dforc.f
  ${CMAKE_SOURCE_DIR}/src/gen3dfrom1d.f
  ${CMAKE_SOURCE_DIR}/src/gen3dfrom2d.f
  ${CMAKE_SOURCE_DIR}/src/gen3dmembrane.f
  ${CMAKE_SOURCE_DIR}/src/gen3dmpc.f
  ${CMAKE_SOURCE_DIR}/src/gen3dnor.f
  ${CMAKE_SOURCE_DIR}/src/gen3dprop.f
  ${CMAKE_SOURCE_DIR}/src/gen3dsurf.f
  ${CMAKE_SOURCE_DIR}/src/gen3dtemp.f
  ${CMAKE_SOURCE_DIR}/src/gen3dtruss.f
  ${CMAKE_SOURCE_DIR}/src/genadvecelem.f
  ${CMAKE_SOURCE_DIR}/src/gencontelem_f2f.f
  ${CMAKE_SOURCE_DIR}/src/gencontelem_n2f.f
  ${CMAKE_SOURCE_DIR}/src/generatecycmpcs.f
  ${CMAKE_SOURCE_DIR}/src/generateeminterfaces.f
  ${CMAKE_SOURCE_DIR}/src/generatetet.f
  ${CMAKE_SOURCE_DIR}/src/generatetet2.f
  ${CMAKE_SOURCE_DIR}/src/genmodes.f
  ${CMAKE_SOURCE_DIR}/src/gennactdofinv.f
  ${CMAKE_SOURCE_DIR}/src/gentiedmpc.f
  ${CMAKE_SOURCE_DIR}/src/geomview.f
  ${CMAKE_SOURCE_DIR}/src/getdesiinfo.f
  ${CMAKE_SOURCE_DIR}/src/getnewline.f
  ${CMAKE_SOURCE_DIR}/src/getnodel.f
  ${CMAKE_SOURCE_DIR}/src/getversion.f
  ${CMAKE_SOURCE_DIR}/src/greens.f
  ${CMAKE_SOURCE_DIR}/src/hcrit.f
  ${CMAKE_SOURCE_DIR}/src/headings.f
  ${CMAKE_SOURCE_DIR}/src/heattransfers.f
  ${CMAKE_SOURCE_DIR}/src/hgforce.f
  ${CMAKE_SOURCE_DIR}/src/hgstiffness.f
  ${CMAKE_SOURCE_DIR}/src/hns.f
  ${CMAKE_SOURCE_DIR}/src/hrk_ud.f
  ${CMAKE_SOURCE_DIR}/src/hro_ud.f
  ${CMAKE_SOURCE_DIR}/src/hrt_mod_smart.f
  ${CMAKE_SOURCE_DIR}/src/hrt_ud.f
  ${CMAKE_SOURCE_DIR}/src/hrv_mod_smart.f
  ${CMAKE_SOURCE_DIR}/src/hrv_ud.f
  ${CMAKE_SOURCE_DIR}/src/hybsvd.f
  ${CMAKE_SOURCE_DIR}/src/hyperelastics.f
  ${CMAKE_SOURCE_DIR}/src/hyperfoams.f
  ${CMAKE_SOURCE_DIR}/src/ident.f
  ${CMAKE_SOURCE_DIR}/src/ident2.f
  ${CMAKE_SOURCE_DIR}/src/identamta.f
  ${CMAKE_SOURCE_DIR}/src/identifyface.f
  ${CMAKE_SOURCE_DIR}/src/identifytiedface.f
  ${CMAKE_SOURCE_DIR}/src/identifytransform.f
  ${CMAKE_SOURCE_DIR}/src/includefilename.f
  ${CMAKE_SOURCE_DIR}/src/incplas.f
  ${CMAKE_SOURCE_DIR}/src/incplas_lin.f
  ${CMAKE_SOURCE_DIR}/src/inequcons.f
  ${CMAKE_SOURCE_DIR}/src/inicalcbody.f
  ${CMAKE_SOURCE_DIR}/src/init.f
  ${CMAKE_SOURCE_DIR}/src/initialcfd.f
  ${CMAKE_SOURCE_DIR}/src/initialchannel.f
  ${CMAKE_SOURCE_DIR}/src/initialconditionss.f
  ${CMAKE_SOURCE_DIR}/src/initialnet.f
  ${CMAKE_SOURCE_DIR}/src/initialstrainincreases.f
  ${CMAKE_SOURCE_DIR}/src/inputerror.f
  ${CMAKE_SOURCE_DIR}/src/inputinfo.f
  ${CMAKE_SOURCE_DIR}/src/inputwarning.f
  ${CMAKE_SOURCE_DIR}/src/interpol_alfa2.f
  ${CMAKE_SOURCE_DIR}/src/interpolateinface.f
  ${CMAKE_SOURCE_DIR}/src/interpolatestate.f
  ${CMAKE_SOURCE_DIR}/src/interpolsubmodel.f
  ${CMAKE_SOURCE_DIR}/src/intersectionpoint.f
  ${CMAKE_SOURCE_DIR}/src/inversewavspd.f
  ${CMAKE_SOURCE_DIR}/src/islavactive.f
  ${CMAKE_SOURCE_DIR}/src/isorti.f
  ${CMAKE_SOURCE_DIR}/src/isortid.f
  ${CMAKE_SOURCE_DIR}/src/isortiddc.f
  ${CMAKE_SOURCE_DIR}/src/isortii.f
  ${CMAKE_SOURCE_DIR}/src/isortiid.f
  ${CMAKE_SOURCE_DIR}/src/isortiiddc.f
  ${CMAKE_SOURCE_DIR}/src/jouleheating.f
  ${CMAKE_SOURCE_DIR}/src/keystart.f
  ${CMAKE_SOURCE_DIR}/src/knotmpc.f
  ${CMAKE_SOURCE_DIR}/src/labyrinth.f
  ${CMAKE_SOURCE_DIR}/src/lab_straight_ppkrit.f
  ${CMAKE_SOURCE_DIR}/src/limit_case_calc.f
  ${CMAKE_SOURCE_DIR}/src/linel.f
  ${CMAKE_SOURCE_DIR}/src/linkdissimilar.f
  ${CMAKE_SOURCE_DIR}/src/linscal.f
  ${CMAKE_SOURCE_DIR}/src/linscal10.f
  ${CMAKE_SOURCE_DIR}/src/linvec.f
  ${CMAKE_SOURCE_DIR}/src/linvec10.f
  ${CMAKE_SOURCE_DIR}/src/lintemp.f
  ${CMAKE_SOURCE_DIR}/src/lintemp_th.f
  ${CMAKE_SOURCE_DIR}/src/liquidchannel.f
  ${CMAKE_SOURCE_DIR}/src/liquidpipe.f
  ${CMAKE_SOURCE_DIR}/src/liquidpump.f
  ${CMAKE_SOURCE_DIR}/src/loadadd.f
  ${CMAKE_SOURCE_DIR}/src/loadaddp.f
  ${CMAKE_SOURCE_DIR}/src/loadaddt.f
  ${CMAKE_SOURCE_DIR}/src/machpi.f
  ${CMAKE_SOURCE_DIR}/src/mafillcorio.f
  ${CMAKE_SOURCE_DIR}/src/mafilldm.f
  ${CMAKE_SOURCE_DIR}/src/mafilldmss.f
  ${CMAKE_SOURCE_DIR}/src/mafillem.f
  ${CMAKE_SOURCE_DIR}/src/mafillfreq_em.f
  ${CMAKE_SOURCE_DIR}/src/mafillk.f
  ${CMAKE_SOURCE_DIR}/src/mafillkcomp.f
  ${CMAKE_SOURCE_DIR}/src/mafillnet.f
  ${CMAKE_SOURCE_DIR}/src/mafillo.f
  ${CMAKE_SOURCE_DIR}/src/mafillocomp.f
  ${CMAKE_SOURCE_DIR}/src/mafillp.f
  ${CMAKE_SOURCE_DIR}/src/mafillpbc.f
  ${CMAKE_SOURCE_DIR}/src/mafillpcomp.f
  ${CMAKE_SOURCE_DIR}/src/mafillsm.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmas.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmcs.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmcsas.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmcsse.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmforc.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmse.f
  ${CMAKE_SOURCE_DIR}/src/mafillsmse2.f
  ${CMAKE_SOURCE_DIR}/src/mafillsm_company.f
  ${CMAKE_SOURCE_DIR}/src/mafillt.f
  ${CMAKE_SOURCE_DIR}/src/mafilltcomp.f
  ${CMAKE_SOURCE_DIR}/src/mafillv.f
  ${CMAKE_SOURCE_DIR}/src/mafillvcomp.f
  ${CMAKE_SOURCE_DIR}/src/magneticpermeabilitys.f
  ${CMAKE_SOURCE_DIR}/src/map3dto1d2d.f
  ${CMAKE_SOURCE_DIR}/src/map3dtolayer.f
  ${CMAKE_SOURCE_DIR}/src/map3dto1d2d_v.f
  ${CMAKE_SOURCE_DIR}/src/massflow_percent.f
  ${CMAKE_SOURCE_DIR}/src/massflows.f
  ${CMAKE_SOURCE_DIR}/src/masss.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd1.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd2.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd_comp1.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd_comp2.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cond.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cp.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_cp_sec.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_dvi.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_em.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_me.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_rho.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_sp.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_tg.f
  ${CMAKE_SOURCE_DIR}/src/materialdata_th.f
  ${CMAKE_SOURCE_DIR}/src/materials.f
  ${CMAKE_SOURCE_DIR}/src/matvec.f
  ${CMAKE_SOURCE_DIR}/src/matvec_struct.f
  ${CMAKE_SOURCE_DIR}/src/meannode.f
  ${CMAKE_SOURCE_DIR}/src/mechmodel.f
  ${CMAKE_SOURCE_DIR}/src/membranesections.f
  ${CMAKE_SOURCE_DIR}/src/midexternaledges.f
  ${CMAKE_SOURCE_DIR}/src/midexternalfaces.f
  ${CMAKE_SOURCE_DIR}/src/modaldampings.f
  ${CMAKE_SOURCE_DIR}/src/modaldynamics.f
  ${CMAKE_SOURCE_DIR}/src/modelchanges.f
  ${CMAKE_SOURCE_DIR}/src/modf.f
  ${CMAKE_SOURCE_DIR}/src/moehring.f
  ${CMAKE_SOURCE_DIR}/src/mpcadd.f
  ${CMAKE_SOURCE_DIR}/src/mpcrem.f
  ${CMAKE_SOURCE_DIR}/src/mpcs.f
  ${CMAKE_SOURCE_DIR}/src/msolve.f
  ${CMAKE_SOURCE_DIR}/src/msolve_struct.f
  ${CMAKE_SOURCE_DIR}/src/mult.f
  ${CMAKE_SOURCE_DIR}/src/multistages.f
  ${CMAKE_SOURCE_DIR}/src/multvec.f
  ${CMAKE_SOURCE_DIR}/src/negativepressure.f
  ${CMAKE_SOURCE_DIR}/src/networkextrapolate.f
  ${CMAKE_SOURCE_DIR}/src/networkforc.f
  ${CMAKE_SOURCE_DIR}/src/networkinum.f
  ${CMAKE_SOURCE_DIR}/src/networkmpc_lhs.f
  ${CMAKE_SOURCE_DIR}/src/networkmpc_rhs.f
  ${CMAKE_SOURCE_DIR}/src/networkneighbor.f
  ${CMAKE_SOURCE_DIR}/src/networkstiff.f
  ${CMAKE_SOURCE_DIR}/src/newnodes.f
  ${CMAKE_SOURCE_DIR}/src/nident.f
  ${CMAKE_SOURCE_DIR}/src/nident2.f
  ${CMAKE_SOURCE_DIR}/src/nidentk.f
  ${CMAKE_SOURCE_DIR}/src/nidentll.f
  ${CMAKE_SOURCE_DIR}/src/near2d.f
  ${CMAKE_SOURCE_DIR}/src/near3d.f
  ${CMAKE_SOURCE_DIR}/src/near3d_se.f
  ${CMAKE_SOURCE_DIR}/src/neartriangle.f
  ${CMAKE_SOURCE_DIR}/src/networkelementpernode.f
  ${CMAKE_SOURCE_DIR}/src/networkmpcs.f
  ${CMAKE_SOURCE_DIR}/src/newton.f
  ${CMAKE_SOURCE_DIR}/src/nmatrix.f
  ${CMAKE_SOURCE_DIR}/src/noanalysiss.f
  ${CMAKE_SOURCE_DIR}/src/nodalthicknesss.f
  ${CMAKE_SOURCE_DIR}/src/nodeprints.f
  ${CMAKE_SOURCE_DIR}/src/nodes.f
  ${CMAKE_SOURCE_DIR}/src/nodestiedface.f
  ${CMAKE_SOURCE_DIR}/src/noelfiles.f
  ${CMAKE_SOURCE_DIR}/src/noelsets.f
  ${CMAKE_SOURCE_DIR}/src/nonlinmpc.f
  ${CMAKE_SOURCE_DIR}/src/norm.f
  ${CMAKE_SOURCE_DIR}/src/normals.f
  ${CMAKE_SOURCE_DIR}/src/normalsforequ_se.f
  ${CMAKE_SOURCE_DIR}/src/normalsoninterface.f
  ${CMAKE_SOURCE_DIR}/src/normalsonsurface_se.f
  ${CMAKE_SOURCE_DIR}/src/norshell3.f
  ${CMAKE_SOURCE_DIR}/src/norshell4.f
  ${CMAKE_SOURCE_DIR}/src/norshell6.f
  ${CMAKE_SOURCE_DIR}/src/norshell8.f
  ${CMAKE_SOURCE_DIR}/src/objectives.f
  ${CMAKE_SOURCE_DIR}/src/objective_disp.f
  ${CMAKE_SOURCE_DIR}/src/objective_disp_dx.f
  ${CMAKE_SOURCE_DIR}/src/objective_disp_tot.f
  ${CMAKE_SOURCE_DIR}/src/objective_freq.f
  ${CMAKE_SOURCE_DIR}/src/objective_freq_cs.f
  ${CMAKE_SOURCE_DIR}/src/objective_mass_dx.f
  ${CMAKE_SOURCE_DIR}/src/objective_shapeener_dx.f
  ${CMAKE_SOURCE_DIR}/src/objective_shapeener_tot.f
  ${CMAKE_SOURCE_DIR}/src/objective_stress_dx_dy.f
  ${CMAKE_SOURCE_DIR}/src/objective_stress.f
  ${CMAKE_SOURCE_DIR}/src/objective_stress_se.f
  ${CMAKE_SOURCE_DIR}/src/objective_stress_tot.f
  ${CMAKE_SOURCE_DIR}/src/onedint.f
  ${CMAKE_SOURCE_DIR}/src/op.f
  ${CMAKE_SOURCE_DIR}/src/opas.f
  ${CMAKE_SOURCE_DIR}/src/op_corio.f
  ${CMAKE_SOURCE_DIR}/src/openfile.f
  ${CMAKE_SOURCE_DIR}/src/openfilefluid.f
  ${CMAKE_SOURCE_DIR}/src/orientations.f
  ${CMAKE_SOURCE_DIR}/src/orifice.f
  ${CMAKE_SOURCE_DIR}/src/orthonl.f
  ${CMAKE_SOURCE_DIR}/src/orthotropic.f
  ${CMAKE_SOURCE_DIR}/src/outputs.f
  ${CMAKE_SOURCE_DIR}/src/patch.f
  ${CMAKE_SOURCE_DIR}/src/physicalconstantss.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdc_cl1.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdc_cl3.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdc_cl3a.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdc_cl3b.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdc_cl3d.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdi_noz.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdi_r.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdi_rl.f
  ${CMAKE_SOURCE_DIR}/src/pk_cdi_se.f
  ${CMAKE_SOURCE_DIR}/src/pk_y0_yg.f
  ${CMAKE_SOURCE_DIR}/src/planeeq.f
  ${CMAKE_SOURCE_DIR}/src/plane_eq.f
  ${CMAKE_SOURCE_DIR}/src/planempc.f
  ${CMAKE_SOURCE_DIR}/src/plastics.f
  ${CMAKE_SOURCE_DIR}/src/plcopy.f
  ${CMAKE_SOURCE_DIR}/src/plinterpol.f
  ${CMAKE_SOURCE_DIR}/src/plmix.f
  ${CMAKE_SOURCE_DIR}/src/pop.f
  ${CMAKE_SOURCE_DIR}/src/postinitialnet.f
  ${CMAKE_SOURCE_DIR}/src/postprojectgrad.f
  ${CMAKE_SOURCE_DIR}/src/posttransition.f
  ${CMAKE_SOURCE_DIR}/src/postview.f
  ${CMAKE_SOURCE_DIR}/src/precfd.f
  ${CMAKE_SOURCE_DIR}/src/preconditioning.f
  ${CMAKE_SOURCE_DIR}/src/preconvert2slapcol.f
  ${CMAKE_SOURCE_DIR}/src/predgmres.f
  ${CMAKE_SOURCE_DIR}/src/predgmres_struct.f
  ${CMAKE_SOURCE_DIR}/src/predir.f
  ${CMAKE_SOURCE_DIR}/src/prefilter.f
  ${CMAKE_SOURCE_DIR}/src/preinitialnet.f
  ${CMAKE_SOURCE_DIR}/src/preprojectgrad.f
  ${CMAKE_SOURCE_DIR}/src/pretensionsections.f
  ${CMAKE_SOURCE_DIR}/src/prethickness.f
  ${CMAKE_SOURCE_DIR}/src/pretransition.f
  ${CMAKE_SOURCE_DIR}/src/printout.f
  ${CMAKE_SOURCE_DIR}/src/printoutelem.f
  ${CMAKE_SOURCE_DIR}/src/printoutface.f
  ${CMAKE_SOURCE_DIR}/src/printoutfluid.f
  ${CMAKE_SOURCE_DIR}/src/printoutint.f
  ${CMAKE_SOURCE_DIR}/src/printoutnode.f
  ${CMAKE_SOURCE_DIR}/src/printoutnodefluid.f
  ${CMAKE_SOURCE_DIR}/src/projectgrad.f
  ${CMAKE_SOURCE_DIR}/src/projectnodes.f
  ${CMAKE_SOURCE_DIR}/src/propertynet.f
  ${CMAKE_SOURCE_DIR}/src/pt2_lim_calc.f
  ${CMAKE_SOURCE_DIR}/src/pt2zpt1_crit.f
  ${CMAKE_SOURCE_DIR}/src/push.f
  ${CMAKE_SOURCE_DIR}/src/qsorti.f
  ${CMAKE_SOURCE_DIR}/src/quadraticsens.f
  ${CMAKE_SOURCE_DIR}/src/radiate.f
  ${CMAKE_SOURCE_DIR}/src/radiates.f
  ${CMAKE_SOURCE_DIR}/src/radmatrix.f
  ${CMAKE_SOURCE_DIR}/src/radresult.f
  ${CMAKE_SOURCE_DIR}/src/randomfields.f
  ${CMAKE_SOURCE_DIR}/src/randomval.f
  ${CMAKE_SOURCE_DIR}/src/rcavi.f
  ${CMAKE_SOURCE_DIR}/src/rcavi2.f
  ${CMAKE_SOURCE_DIR}/src/rcavi_cp_lt.f
  ${CMAKE_SOURCE_DIR}/src/rcavi_cp_nt.f
  ${CMAKE_SOURCE_DIR}/src/readforce.f
  ${CMAKE_SOURCE_DIR}/src/readsen.f
  ${CMAKE_SOURCE_DIR}/src/readview.f
  ${CMAKE_SOURCE_DIR}/src/rearrange.f
  ${CMAKE_SOURCE_DIR}/src/rectcyl.f
  ${CMAKE_SOURCE_DIR}/src/rectcylexp.f
  ${CMAKE_SOURCE_DIR}/src/rectcyltrfm.f
  ${CMAKE_SOURCE_DIR}/src/rectcylvi.f
  ${CMAKE_SOURCE_DIR}/src/refinemeshs.f
  ${CMAKE_SOURCE_DIR}/src/reinit2.f
  ${CMAKE_SOURCE_DIR}/src/removetet2.f
  ${CMAKE_SOURCE_DIR}/src/reorderampl.f
  ${CMAKE_SOURCE_DIR}/src/reorderlhs.f
  ${CMAKE_SOURCE_DIR}/src/reorderrhs.f
  ${CMAKE_SOURCE_DIR}/src/reorderrhs1.f
  ${CMAKE_SOURCE_DIR}/src/restartread.f
  ${CMAKE_SOURCE_DIR}/src/restarts.f
  ${CMAKE_SOURCE_DIR}/src/restartshort.f
  ${CMAKE_SOURCE_DIR}/src/restartwrite.f
  ${CMAKE_SOURCE_DIR}/src/restrictor.f
  ${CMAKE_SOURCE_DIR}/src/resultsforc.f
  ${CMAKE_SOURCE_DIR}/src/resultsforc_em.f
  ${CMAKE_SOURCE_DIR}/src/resultsini.f
  ${CMAKE_SOURCE_DIR}/src/resultsini_em.f
  ${CMAKE_SOURCE_DIR}/src/resultnet.f
  ${CMAKE_SOURCE_DIR}/src/resultsnoddir.f
  ${CMAKE_SOURCE_DIR}/src/resultsem.f
  ${CMAKE_SOURCE_DIR}/src/resultsforc_se.f
  ${CMAKE_SOURCE_DIR}/src/resultsmech.f
  ${CMAKE_SOURCE_DIR}/src/resultsmech_se.f
  ${CMAKE_SOURCE_DIR}/src/resultsmech_u.f
  ${CMAKE_SOURCE_DIR}/src/resultsmech_u1.f
  ${CMAKE_SOURCE_DIR}/src/resultsprint.f
  ${CMAKE_SOURCE_DIR}/src/resultstherm.f
  ${CMAKE_SOURCE_DIR}/src/retainednodaldofss.f
  ${CMAKE_SOURCE_DIR}/src/rhs.f
  ${CMAKE_SOURCE_DIR}/src/rhsp.f
  ${CMAKE_SOURCE_DIR}/src/rhspcomp.f
  ${CMAKE_SOURCE_DIR}/src/rigidbodys.f
  ${CMAKE_SOURCE_DIR}/src/rigidmpc.f
  ${CMAKE_SOURCE_DIR}/src/rimseal.f
  ${CMAKE_SOURCE_DIR}/src/rimseal_calc.f
  ${CMAKE_SOURCE_DIR}/src/rotationvector.f
  ${CMAKE_SOURCE_DIR}/src/rotationvectorinv.f
  ${CMAKE_SOURCE_DIR}/src/rs.f
  ${CMAKE_SOURCE_DIR}/src/rubber.f
  ${CMAKE_SOURCE_DIR}/src/scalesen.f
  ${CMAKE_SOURCE_DIR}/src/scavenge_pump.f
  ${CMAKE_SOURCE_DIR}/src/sdvini.f
  ${CMAKE_SOURCE_DIR}/src/sectionprints.f
  ${CMAKE_SOURCE_DIR}/src/selectcyclicsymmetrymodess.f
  ${CMAKE_SOURCE_DIR}/src/sensitivitys.f
  ${CMAKE_SOURCE_DIR}/src/sensitivity_glob.f
  ${CMAKE_SOURCE_DIR}/src/shape2l.f
  ${CMAKE_SOURCE_DIR}/src/shape3l.f
  ${CMAKE_SOURCE_DIR}/src/shape3tri.f
  ${CMAKE_SOURCE_DIR}/src/shape4q.f
  ${CMAKE_SOURCE_DIR}/src/shape4tet.f
  ${CMAKE_SOURCE_DIR}/src/shape6tri.f
  ${CMAKE_SOURCE_DIR}/src/shape7tri.f
  ${CMAKE_SOURCE_DIR}/src/shape6w.f
  ${CMAKE_SOURCE_DIR}/src/shape8h.f
  ${CMAKE_SOURCE_DIR}/src/shape8hr.f
  ${CMAKE_SOURCE_DIR}/src/shape8hu.f
  ${CMAKE_SOURCE_DIR}/src/shape8q.f
  ${CMAKE_SOURCE_DIR}/src/shape9q.f
  ${CMAKE_SOURCE_DIR}/src/shape10tet.f
  ${CMAKE_SOURCE_DIR}/src/shape14tet.f
  ${CMAKE_SOURCE_DIR}/src/shape15w.f
  ${CMAKE_SOURCE_DIR}/src/shape20h.f
  ${CMAKE_SOURCE_DIR}/src/shape20h_ax.f
  ${CMAKE_SOURCE_DIR}/src/shape20h_pl.f
  ${CMAKE_SOURCE_DIR}/src/shape26h.f
  ${CMAKE_SOURCE_DIR}/src/shellsections.f
  ${CMAKE_SOURCE_DIR}/src/sigini.f
  ${CMAKE_SOURCE_DIR}/src/skip.f
  ${CMAKE_SOURCE_DIR}/src/slavintpoints.f
  ${CMAKE_SOURCE_DIR}/src/smalldist.f
  ${CMAKE_SOURCE_DIR}/src/solidsections.f
  ${CMAKE_SOURCE_DIR}/src/solveexplicitly.f
  ${CMAKE_SOURCE_DIR}/src/sortev.f
  ${CMAKE_SOURCE_DIR}/src/spcmatch.f
  ${CMAKE_SOURCE_DIR}/src/specificgasconstants.f
  ${CMAKE_SOURCE_DIR}/src/specificheats.f
  ${CMAKE_SOURCE_DIR}/src/splitline.f
  ${CMAKE_SOURCE_DIR}/src/springdamp_f2f.f
  ${CMAKE_SOURCE_DIR}/src/springdamp_n2f.f
  ${CMAKE_SOURCE_DIR}/src/springs.f
  ${CMAKE_SOURCE_DIR}/src/springforc_f2f.f
  ${CMAKE_SOURCE_DIR}/src/springforc_n2f.f
  ${CMAKE_SOURCE_DIR}/src/springforc_f2f_th.f
  ${CMAKE_SOURCE_DIR}/src/springforc_n2f_th.f
  ${CMAKE_SOURCE_DIR}/src/springstiff_f2f.f
  ${CMAKE_SOURCE_DIR}/src/springstiff_n2f.f
  ${CMAKE_SOURCE_DIR}/src/springstiff_f2f_th.f
  ${CMAKE_SOURCE_DIR}/src/springstiff_n2f_th.f
  ${CMAKE_SOURCE_DIR}/src/statics.f
  ${CMAKE_SOURCE_DIR}/src/steadystatedynamicss.f
  ${CMAKE_SOURCE_DIR}/src/steps.f
  ${CMAKE_SOURCE_DIR}/src/stiff2mat.f
  ${CMAKE_SOURCE_DIR}/src/stop.f
  ${CMAKE_SOURCE_DIR}/src/stopwithout201.f
  ${CMAKE_SOURCE_DIR}/src/storecontactprop.f
  ${CMAKE_SOURCE_DIR}/src/storeresidual.f
  ${CMAKE_SOURCE_DIR}/src/str2mat.f
  ${CMAKE_SOURCE_DIR}/src/straighteq2d.f
  ${CMAKE_SOURCE_DIR}/src/straighteq3d.f
  ${CMAKE_SOURCE_DIR}/src/straighteq3dpen.f
  ${CMAKE_SOURCE_DIR}/src/straightmpc.f
  ${CMAKE_SOURCE_DIR}/src/submodels.f
  ${CMAKE_SOURCE_DIR}/src/subspace.f
  ${CMAKE_SOURCE_DIR}/src/substructuregenerates.f
  ${CMAKE_SOURCE_DIR}/src/substructurematrixoutputs.f
  ${CMAKE_SOURCE_DIR}/src/surfacebehaviors.f
  ${CMAKE_SOURCE_DIR}/src/surfaceinteractions.f
  ${CMAKE_SOURCE_DIR}/src/surfaces.f
  ${CMAKE_SOURCE_DIR}/src/sutherland_hodgman.f
  ${CMAKE_SOURCE_DIR}/src/swap.f
  ${CMAKE_SOURCE_DIR}/src/tee.f
  ${CMAKE_SOURCE_DIR}/src/temperatures.f
  ${CMAKE_SOURCE_DIR}/src/tempload.f
  ${CMAKE_SOURCE_DIR}/src/tempload_em.f
  ${CMAKE_SOURCE_DIR}/src/temploaddiff.f
  ${CMAKE_SOURCE_DIR}/src/temploadmodal.f
  ${CMAKE_SOURCE_DIR}/src/thermmodel.f
  ${CMAKE_SOURCE_DIR}/src/thickness.f
  ${CMAKE_SOURCE_DIR}/src/tiefaccont.f
  ${CMAKE_SOURCE_DIR}/src/ties.f
  ${CMAKE_SOURCE_DIR}/src/timepointss.f
  ${CMAKE_SOURCE_DIR}/src/transformatrix.f
  ${CMAKE_SOURCE_DIR}/src/transformfs.f
  ${CMAKE_SOURCE_DIR}/src/transforms.f
  ${CMAKE_SOURCE_DIR}/src/transition.f
  ${CMAKE_SOURCE_DIR}/src/treatmasterface.f
  ${CMAKE_SOURCE_DIR}/src/trianeighbor.f
  ${CMAKE_SOURCE_DIR}/src/triangucont.f
  ${CMAKE_SOURCE_DIR}/src/triangulate.f
  ${CMAKE_SOURCE_DIR}/src/tridiagonal.f
  ${CMAKE_SOURCE_DIR}/src/tridiagonal_nrhs.f
  ${CMAKE_SOURCE_DIR}/src/triloc.f
  ${CMAKE_SOURCE_DIR}/src/ts_calc.f
  ${CMAKE_SOURCE_DIR}/src/tt_calc.f
  ${CMAKE_SOURCE_DIR}/src/twodint.f
  ${CMAKE_SOURCE_DIR}/src/two_phase_flow.f
  ${CMAKE_SOURCE_DIR}/src/uamplitude.f
  ${CMAKE_SOURCE_DIR}/src/uboun.f
  ${CMAKE_SOURCE_DIR}/src/ufaceload.f
  ${CMAKE_SOURCE_DIR}/src/uhardening.f
  ${CMAKE_SOURCE_DIR}/src/umat.f
  ${CMAKE_SOURCE_DIR}/src/umatht.f
  ${CMAKE_SOURCE_DIR}/src/umat_abaqus.f
  ${CMAKE_SOURCE_DIR}/src/umat_abaqusnl.f
  ${CMAKE_SOURCE_DIR}/src/umat_aniso_creep.f
  ${CMAKE_SOURCE_DIR}/src/umat_aniso_plas.f
  ${CMAKE_SOURCE_DIR}/src/umat_ciarlet_el.f
  ${CMAKE_SOURCE_DIR}/src/umat_compression_only.f
  ${CMAKE_SOURCE_DIR}/src/umat_elastic_fiber.f
  ${CMAKE_SOURCE_DIR}/src/umat_ideal_gas.f
  ${CMAKE_SOURCE_DIR}/src/umat_lin_iso_el.f
  ${CMAKE_SOURCE_DIR}/src/umat_main.f
  ${CMAKE_SOURCE_DIR}/src/umat_single_crystal.f
  ${CMAKE_SOURCE_DIR}/src/umat_single_crystal_creep.f
  ${CMAKE_SOURCE_DIR}/src/umat_tension_only.f
  ${CMAKE_SOURCE_DIR}/src/umat_undo_nlgeom_lin_iso_el.f
  ${CMAKE_SOURCE_DIR}/src/umat_user.f
  ${CMAKE_SOURCE_DIR}/src/umpc_dist.f
  ${CMAKE_SOURCE_DIR}/src/umpc_gap.f
  ${CMAKE_SOURCE_DIR}/src/umpc_mean_rot.f
  ${CMAKE_SOURCE_DIR}/src/umpc_user.f
  ${CMAKE_SOURCE_DIR}/src/uncouptempdisps.f
  ${CMAKE_SOURCE_DIR}/src/updatecont.f
  ${CMAKE_SOURCE_DIR}/src/updatecontpen.f
  ${CMAKE_SOURCE_DIR}/src/updatecont2d.f
  ${CMAKE_SOURCE_DIR}/src/userelements.f
  ${CMAKE_SOURCE_DIR}/src/usermaterials.f
  ${CMAKE_SOURCE_DIR}/src/usermpc.f
  ${CMAKE_SOURCE_DIR}/src/user_network_element.f
  ${CMAKE_SOURCE_DIR}/src/user_network_element_p0.f
  ${CMAKE_SOURCE_DIR}/src/user_network_element_p1.f
  ${CMAKE_SOURCE_DIR}/src/utemp.f
  ${CMAKE_SOURCE_DIR}/src/utemp_ccxlib.f
  ${CMAKE_SOURCE_DIR}/src/valuesatinfinitys.f
  ${CMAKE_SOURCE_DIR}/src/velsolve.f
  ${CMAKE_SOURCE_DIR}/src/viewfactors.f
  ${CMAKE_SOURCE_DIR}/src/viscos.f
  ${CMAKE_SOURCE_DIR}/src/vortex.f
  ${CMAKE_SOURCE_DIR}/src/wcoef.f
  ${CMAKE_SOURCE_DIR}/src/withinradius3d.f
  ${CMAKE_SOURCE_DIR}/src/wpi.f
  ${CMAKE_SOURCE_DIR}/src/writeboun.f
  ${CMAKE_SOURCE_DIR}/src/writebv.f
  ${CMAKE_SOURCE_DIR}/src/writecvg.f
  ${CMAKE_SOURCE_DIR}/src/writedeigdx.f
  ${CMAKE_SOURCE_DIR}/src/writedesi.f
  ${CMAKE_SOURCE_DIR}/src/writeelem.f
  ${CMAKE_SOURCE_DIR}/src/writeev.f
  ${CMAKE_SOURCE_DIR}/src/writeevcomplex.f
  ${CMAKE_SOURCE_DIR}/src/writeevcs.f
  ${CMAKE_SOURCE_DIR}/src/writeevcscomplex.f
  ${CMAKE_SOURCE_DIR}/src/writehe.f
  ${CMAKE_SOURCE_DIR}/src/writeim.f
  ${CMAKE_SOURCE_DIR}/src/writeinput.f
  ${CMAKE_SOURCE_DIR}/src/writelm.f
  ${CMAKE_SOURCE_DIR}/src/writemac.f
  ${CMAKE_SOURCE_DIR}/src/writemaccs.f
  ${CMAKE_SOURCE_DIR}/src/writemeshinp.f
  ${CMAKE_SOURCE_DIR}/src/writempc.f
  ${CMAKE_SOURCE_DIR}/src/writeobj.f
  ${CMAKE_SOURCE_DIR}/src/writepf.f
  ${CMAKE_SOURCE_DIR}/src/writerandomfield.f
  ${CMAKE_SOURCE_DIR}/src/writere.f
  ${CMAKE_SOURCE_DIR}/src/writerefinemesh.f
  ${CMAKE_SOURCE_DIR}/src/writesen.f
  ${CMAKE_SOURCE_DIR}/src/writesta.f
  ${CMAKE_SOURCE_DIR}/src/writestadiv.f
  ${CMAKE_SOURCE_DIR}/src/writesubmatrix.f
  ${CMAKE_SOURCE_DIR}/src/writetetmesh.f
  ${CMAKE_SOURCE_DIR}/src/writevfa.f
  ${CMAKE_SOURCE_DIR}/src/writeview.f
  ${CMAKE_SOURCE_DIR}/src/wye.f
  ${CMAKE_SOURCE_DIR}/src/zeta_calc.f
  ${CMAKE_SOURCE_DIR}/src/zienzhu.f )

set(SCCXC
  ${CMAKE_SOURCE_DIR}/src/arpack.c
  ${CMAKE_SOURCE_DIR}/src/arpackbu.c
  ${CMAKE_SOURCE_DIR}/src/arpackcs.c
  ${CMAKE_SOURCE_DIR}/src/biosav.c
  ${CMAKE_SOURCE_DIR}/src/calcfluxmain.c
  ${CMAKE_SOURCE_DIR}/src/calcgammatmain.c
  ${CMAKE_SOURCE_DIR}/src/calcgammavmain.c
  ${CMAKE_SOURCE_DIR}/src/calcresidual.c
  ${CMAKE_SOURCE_DIR}/src/calcresidual_em.c
  ${CMAKE_SOURCE_DIR}/src/calcrestfluidmain.c
  ${CMAKE_SOURCE_DIR}/src/calcresvfluidmain.c
  ${CMAKE_SOURCE_DIR}/src/calcrhoelcompmain.c
  ${CMAKE_SOURCE_DIR}/src/calcrhoelmain.c
  ${CMAKE_SOURCE_DIR}/src/calcrhofamain.c
  ${CMAKE_SOURCE_DIR}/src/calcrhofacomp_mod_smartmain.c
  ${CMAKE_SOURCE_DIR}/src/calcrhofacomp_udmain.c
  ${CMAKE_SOURCE_DIR}/src/call_external_umat.c
  ${CMAKE_SOURCE_DIR}/src/call_external_umat_user.c
  ${CMAKE_SOURCE_DIR}/src/cascade.c
  ${CMAKE_SOURCE_DIR}/src/checkconvergence.c
  ${CMAKE_SOURCE_DIR}/src/checkconvnet.c
  ${CMAKE_SOURCE_DIR}/src/checkdivergence.c
  ${CMAKE_SOURCE_DIR}/src/checkinclength.c
  ${CMAKE_SOURCE_DIR}/src/compare.c
  ${CMAKE_SOURCE_DIR}/src/compfluid.c
  ${CMAKE_SOURCE_DIR}/src/complexfreq.c
  ${CMAKE_SOURCE_DIR}/src/contact.c
  ${CMAKE_SOURCE_DIR}/src/correctfluxcompmain.c
  ${CMAKE_SOURCE_DIR}/src/correctfluxmain.c
  ${CMAKE_SOURCE_DIR}/src/correctvelmain.c
  ${CMAKE_SOURCE_DIR}/src/dfdbj.c
  ${CMAKE_SOURCE_DIR}/src/dgmresmain.c
  ${CMAKE_SOURCE_DIR}/src/dyna.c
  ${CMAKE_SOURCE_DIR}/src/dynacont.c
  ${CMAKE_SOURCE_DIR}/src/dynboun.c
  ${CMAKE_SOURCE_DIR}/src/electromagnetics.c
  ${CMAKE_SOURCE_DIR}/src/elemChecker.c
  ${CMAKE_SOURCE_DIR}/src/exo.c
  ${CMAKE_SOURCE_DIR}/src/exoselect.c
  ${CMAKE_SOURCE_DIR}/src/exosetfind.c
  ${CMAKE_SOURCE_DIR}/src/exovector.c
  ${CMAKE_SOURCE_DIR}/src/elementcpuload.c
  ${CMAKE_SOURCE_DIR}/src/exo.c
  ${CMAKE_SOURCE_DIR}/src/exoselect.c
  ${CMAKE_SOURCE_DIR}/src/exosetfind.c
  ${CMAKE_SOURCE_DIR}/src/exovector.c
  ${CMAKE_SOURCE_DIR}/src/expand.c
  ${CMAKE_SOURCE_DIR}/src/external.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_dpelmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_kelmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_oelmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_pelmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_telmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapol_velmain.c
  ${CMAKE_SOURCE_DIR}/src/extrapolate_d_v_simplemain.c
  ${CMAKE_SOURCE_DIR}/src/extrapolate_d_v_simplecmain.c
  ${CMAKE_SOURCE_DIR}/src/filtermain.c
  ${CMAKE_SOURCE_DIR}/src/frd.c
  ${CMAKE_SOURCE_DIR}/src/frdcyc.c
  ${CMAKE_SOURCE_DIR}/src/frdgeneralvector.c
  ${CMAKE_SOURCE_DIR}/src/frdheader.c
  ${CMAKE_SOURCE_DIR}/src/frdselect.c
  ${CMAKE_SOURCE_DIR}/src/frdset.c
  ${CMAKE_SOURCE_DIR}/src/frdvector.c
  ${CMAKE_SOURCE_DIR}/src/frd_sen.c
  ${CMAKE_SOURCE_DIR}/src/frecord.c
  ${CMAKE_SOURCE_DIR}/src/genrandmain.c
  ${CMAKE_SOURCE_DIR}/src/getglobalresults.c
  ${CMAKE_SOURCE_DIR}/src/getlocalresults.c
  ${CMAKE_SOURCE_DIR}/src/getSystemCPUs.c
  ${CMAKE_SOURCE_DIR}/src/hrk_udmain.c
  ${CMAKE_SOURCE_DIR}/src/hro_udmain.c
  ${CMAKE_SOURCE_DIR}/src/hrt_udmain.c
  ${CMAKE_SOURCE_DIR}/src/hrv_mod_smartmain.c
  ${CMAKE_SOURCE_DIR}/src/hrv_udmain.c
  ${CMAKE_SOURCE_DIR}/src/inicont.c
  ${CMAKE_SOURCE_DIR}/src/insert.c
  ${CMAKE_SOURCE_DIR}/src/insertfreq.c
  ${CMAKE_SOURCE_DIR}/src/insertrad.c
  ${CMAKE_SOURCE_DIR}/src/linstatic.c
  ${CMAKE_SOURCE_DIR}/src/mafilldmssmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillkcompmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillkmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillocompmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillomain.c
  ${CMAKE_SOURCE_DIR}/src/mafillpcompmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillpmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillsmmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillsmmain_se.c
  ${CMAKE_SOURCE_DIR}/src/mafillsmmain_se2.c
  ${CMAKE_SOURCE_DIR}/src/mafilltcompmain.c
  ${CMAKE_SOURCE_DIR}/src/mafilltmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillvcompmain.c
  ${CMAKE_SOURCE_DIR}/src/mafillvmain.c
  ${CMAKE_SOURCE_DIR}/src/mastruct.c
  ${CMAKE_SOURCE_DIR}/src/mastructcs.c
  ${CMAKE_SOURCE_DIR}/src/mastructem.c
  ${CMAKE_SOURCE_DIR}/src/mastructf.c
  ${CMAKE_SOURCE_DIR}/src/mastructnmatrix.c
  ${CMAKE_SOURCE_DIR}/src/mastructrad.c
  ${CMAKE_SOURCE_DIR}/src/mastructrand.c
  ${CMAKE_SOURCE_DIR}/src/mastructse.c
  ${CMAKE_SOURCE_DIR}/src/mastructse2.c
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfd_compmain.c
  ${CMAKE_SOURCE_DIR}/src/materialdata_cfdmain.c
  ${CMAKE_SOURCE_DIR}/src/matrixstorage.c
  ${CMAKE_SOURCE_DIR}/src/nonlingeo.c
  ${CMAKE_SOURCE_DIR}/src/objectivemain_se.c
  ${CMAKE_SOURCE_DIR}/src/pardiso.c
  ${CMAKE_SOURCE_DIR}/src/pardiso_as.c
  ${CMAKE_SOURCE_DIR}/src/pcgsolver.c
  ${CMAKE_SOURCE_DIR}/src/precontact.c
  ${CMAKE_SOURCE_DIR}/src/predgmres_struct_mt.c
  ${CMAKE_SOURCE_DIR}/src/prediction.c
  ${CMAKE_SOURCE_DIR}/src/prediction_em.c
  ${CMAKE_SOURCE_DIR}/src/preiter.c
  ${CMAKE_SOURCE_DIR}/src/projectgradmain.c
  ${CMAKE_SOURCE_DIR}/src/radcyc.c
  ${CMAKE_SOURCE_DIR}/src/radflowload.c
  ${CMAKE_SOURCE_DIR}/src/randomfieldmain.c
  ${CMAKE_SOURCE_DIR}/src/readfrd.c
  ${CMAKE_SOURCE_DIR}/src/readinput.c
  ${CMAKE_SOURCE_DIR}/src/refinemesh.c
  ${CMAKE_SOURCE_DIR}/src/remastruct.c
  ${CMAKE_SOURCE_DIR}/src/remastructar.c
  ${CMAKE_SOURCE_DIR}/src/remastructem.c
  ${CMAKE_SOURCE_DIR}/src/reorderlhsmain.c
  ${CMAKE_SOURCE_DIR}/src/results.c
  ${CMAKE_SOURCE_DIR}/src/resultsinduction.c
  ${CMAKE_SOURCE_DIR}/src/resultsstr.c
  ${CMAKE_SOURCE_DIR}/src/results_se.c
  ${CMAKE_SOURCE_DIR}/src/rhspmain.c
  ${CMAKE_SOURCE_DIR}/src/rhspcompmain.c
  ${CMAKE_SOURCE_DIR}/src/sensitivity.c
  ${CMAKE_SOURCE_DIR}/src/sensitivity_out.c
  ${CMAKE_SOURCE_DIR}/src/sgi.c
  ${CMAKE_SOURCE_DIR}/src/spooles.c
  ${CMAKE_SOURCE_DIR}/src/steadystate.c
  ${CMAKE_SOURCE_DIR}/src/stof.c
  ${CMAKE_SOURCE_DIR}/src/stoi.c
  ${CMAKE_SOURCE_DIR}/src/storecontactdof.c
  ${CMAKE_SOURCE_DIR}/src/stos.c
  ${CMAKE_SOURCE_DIR}/src/strcmp1.c
  ${CMAKE_SOURCE_DIR}/src/strcmp2.c
  ${CMAKE_SOURCE_DIR}/src/strcpy1.c
  ${CMAKE_SOURCE_DIR}/src/stress_sen_dv.c
  ${CMAKE_SOURCE_DIR}/src/stress_sen_dx.c
  ${CMAKE_SOURCE_DIR}/src/stress_sen_2ndorder.c
  ${CMAKE_SOURCE_DIR}/src/strsplt.c
  ${CMAKE_SOURCE_DIR}/src/suitesparse.c
  ${CMAKE_SOURCE_DIR}/src/tau.c
  ${CMAKE_SOURCE_DIR}/src/thicknessmain.c
  ${CMAKE_SOURCE_DIR}/src/tiedcontact.c
  ${CMAKE_SOURCE_DIR}/src/transitionmain.c
  ${CMAKE_SOURCE_DIR}/src/u_calloc.c
  ${CMAKE_SOURCE_DIR}/src/u_free.c
  ${CMAKE_SOURCE_DIR}/src/u_realloc.c
  ${CMAKE_SOURCE_DIR}/src/v_betrag.c
  ${CMAKE_SOURCE_DIR}/src/v_prod.c
  ${CMAKE_SOURCE_DIR}/src/v_result.c
  ${CMAKE_SOURCE_DIR}/src/writeheading.c )

set(SCCXCXX
  ${CMAKE_SOURCE_DIR}/src/umat_dl.cpp)

set(SCCXCU
  ${CMAKE_SOURCE_DIR}/src/cudacusp.cu
  ${CMAKE_SOURCE_DIR}/src/cudacusp.thrustassembly.cu )

set(CSCCXX
  ${CMAKE_SOURCE_DIR}/src/stepNonlinGeo.C )

set(CLCXLIB ${SCCXF} ${SCCXC} ${SCCXCU} ${CSCCXX})

set(CLCXMAIN ${CMAKE_SOURCE_DIR}/src/ccx_2.15.c)

###############
# Targets
###############

# library
add_library(clcx ${CLCXLIB})
target_link_libraries(clcx
  PUBLIC
  ${MPI_LIBRARIES}
  ${LAPACK_LIBRARIES}
  ${BLAS_LIBRARIES}
  ${SPOOLES_LIB}
  ${ARPACK_LIB}
  ${EXODUS_LIBRARIES}
  ${NetCDF_LIBRARIES}
  Threads::Threads
)

target_include_directories(clcx
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include/clcx>
)

target_include_directories(clcx
    SYSTEM PUBLIC
    /usr/include/spooles
    /usr/include/spooles/MT
    /usr/include/spooles/MPI)

install(TARGETS clcx
    EXPORT clcx
    RUNTIME DESTINATION bin
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# Export Nemosys as a CMake package
install(FILES clcxConfig.cmake
    DESTINATION lib/cmake/clcx)
install(EXPORT clcx
    NAMESPACE Calculix::
    DESTINATION lib/cmake/clcx)

# main driver
add_executable(ccx_2.15 ${CLCXMAIN})
target_link_libraries(ccx_2.15 clcx)
install(TARGETS ccx_2.15
    RUNTIME DESTINATION bin
    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# csc module
if (ENABLE_CSC)
  add_subdirectory(csc)
endif()

